# Contact_APP

./: .gitignore  CLAUDE.md  Dockerfile  README.md
Police Log Examples/: POL-20240713-0422.txt  Police Logs 1.txt  Police Logs 2.txt  Police Logs 3.txt  Police_Logs_1
backend/: pyproject.toml
backend/app/: assess.py  db.py  knowledge.py  llm.py  main.py  parse_file.py  principal_crimes.py  redact.py  report.py  routes.py  schemas.py
reference/: POINTS_TO_PROVE.md  Vulnerability.md
scripts/: start-windows.ps1  stop-linux.sh  stop-windows.ps1
