[project]
name = "backend"
version = "0.1.0"
description = "Crime Recording Assessment App — backend"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.0",
    "odfpy>=1.4.1",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
